# agentic-model-risk-validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  fallbacks.py  runner.py  workflow.py
app/api/: routes.py
app/schemas/: __init__.py  agent_outputs.py  jobs.py
app/services/: job_service.py  risk_policy.py  validation_service.py
app/storage/jobs/42d09682-bdd9-4284-aad4-26a9184e1f9c/: agent_outputs.json  agent_timeline.json  deterministic_results.json
app/storage/jobs/bcc03879-87eb-4443-b834-9d01fed27fd5/: agent_timeline.json  deterministic_results.json
app/storage/jobs/fbff20d1-ed90-4cdd-b2f8-147c02f6c048/: agent_timeline.json  deterministic_results.json
app/storage/reports/42d09682-bdd9-4284-aad4-26a9184e1f9c/: validation_report.md
app/storage/reports/fbff20d1-ed90-4cdd-b2f8-147c02f6c048/: validation_report.md
app/storage/uploads/42d09682-bdd9-4284-aad4-26a9184e1f9c/: sample_credit_risk.csv
app/tools/: __init__.py  data_tools.py  fairness_tools.py  json_utils.py  model_tools.py  plot_tools.py  report_tools.py
frontend/: streamlit_app.py
scripts/: generate_sample_data.py
tests/: test_data_tools.py  test_model_and_policy.py
